@@ -25,7 +25,7 @@ The example pdf is available [here](../examples/ExampleGradedReader.pdf)
 * Key names are underlined in the story.
 
 
-## 3. Windows Setup Guide
+## 3. Setup Guide (for Windows - fairly similar for Ubuntu and presumably Mac)
 ###### This should be defunct when a GUI/installer is made
 1. Make a Github account and fork this project (to make your own local version). This seems to be the easiest way to get it running on your PC late on.
 
@@ -37,17 +37,27 @@ The example pdf is available [here](../examples/ExampleGradedReader.pdf)
 
 5. In IDEA, click on Graded-Reader-Builder/src/main.kt (at the top left). IDEA will say "Project SDK not defined", so you need to get the java SDK.
 
-6. Get the latest [Java jdk - here is jdk9](http://www.oracle.com/technetwork/java/javase/downloads/jdk9-downloads-3848520.html). Install. Point IDEA to the install folder (C:\Progam Files\Java\jdk-9.0.4 for me)
+6. Get the latest [Java jdk - here is jdk11](https://www.oracle.com/technetwork/java/javase/downloads/jdk11-downloads-5066655.html). Install. Point IDEA to the install folder (C:\Progam Files\Java\jdk-9.0.4 for me)
 
 7. Wait for IDEA to index. It'll probably ask to update Kotlin.
 
 8. Hit File -> Project Structure -> Project Settings -> Libraries -> Add JARs, and choose the libs folder at "C:\Users\YourUsername\IdeaProjects\Graded-Reader-Builder\libs".
 
-9. In the "res" folder, replace the input file contents with your content (following the example format).
+9. Set your [path variables for JavaFX](https://openjfx.io/openjfx-docs/#install-javafx) for your OS, and in IDEA/File/Settings/Appearance and Behaviour/Path Variables/Path variables
 
-10. At the top of IDEA, press "Run", then "run", then choose "Main.kt"
+10. In the "res" folder, replace the input file contents with your content (following the example format).
 
-11. Code will run, and in a command window (bash) xelatex will get the required packages/files. This could take quite a few minutes.
+11. At the top of IDEA, press "Run", then "edit configurations". 
+* Hit plus, then "Kotlin"
+* Main class: MainGUIKt
+* VM options: --module-path ${PATH_TO_FX} --add-modules=javafx.controls,javafx.fxml,javafx.graphics,javafx.base
+* JRE: 11 
+
+
+
+12. Code will run, and in a command window (bash) xelatex will get the required packages/files. This could take quite a few minutes.
+
+Updating packages from the MiKTeX console and restarting might help too. I could run my .sh/.bat manually from Windows, but executing this file from IDEA made the terminal close instantly until I did this.
 
 If using a LaTeX studio (I was using TeXStudio before automating LaTeX->pdf with miktex(/xelatex), then you may need to: 
 * Install packages (mostly for CJK/pinyin)
